# SpeedwagonAI

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: claude-ui-design-brief.md  deployable-product-roadmap.md  local-api.md  native-mac-roadmap.md  privacy-policy-local-beta.md  screencapturekit-spike.md  terms-local-beta.md
native/SpeedwagonAI/: Package.swift  README.md
native/SpeedwagonAI/Sources/SpeedwagonAI/: AppState.swift  AssistantPanelController.swift  ContentView.swift  GlobalHotKey.swift  NativeMeetingRecorder.swift  ScreenshotCapture.swift  SpeedwagonAIApp.swift  SpeedwagonTheme.swift
native/SpeedwagonAI/Sources/SpeedwagonAICore/: APIClient.swift  AudioFileMixer.swift  BackendManager.swift  KeychainStore.swift  LocalBetaDiagnostics.swift  Models.swift  TaskGrouping.swift
native/SpeedwagonAI/scripts/: build-beta-dmg.sh  build-local-app.sh  build-signed-app.sh  notarize-app.sh  package-common.sh
speedwagon_ai/: __init__.py  app.py  assistant_actions.py  assistant_brain.py  assistant_commands.py  assistant_pipeline.py  capture.py  cli.py  config.py  context.py  dateparse.py  email_composer.py  extraction.py  intelligence.py  meeting_bot.py  model_router.py  models.py  output.py  processing.py  screenshot_context.py  storage.py  system_tools.py  transcription.py  voice_tasks.py
speedwagon_ai/integrations/: __init__.py  calendar.py  gmail.py
tests/: test_app_api.py  test_assistant_commands.py  test_calendar_integration.py  test_capture.py  test_cli_flow.py  test_meeting_bot.py  test_model_router.py  test_storage_output.py  test_voice_tasks.py
(+4 files in other folders)
