[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "speedwagon-ai"
version = "0.1.0"
description = "Local-first meeting context engine for Mac."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "SpeedwagonAI" }]
dependencies = []

[project.optional-dependencies]
dev = []

[project.scripts]
speedwagon = "speedwagon_ai.cli:main"

[tool.setuptools.packages.find]
include = ["speedwagon_ai*"]
